@@ -2,6 +2,8 @@ prefix = /usr
 datadir = $(prefix)/share
 mandir = $(datadir)/man
 
+template = dagit.ott
+
 txttargets = $(shell echo *.txt)
 htmltargets = $(patsubst %.txt, %.html, $(txttargets))
 
@@ -29,3 +31,18 @@ clean:
 %.1: %.1.xml
 	@xmlto man $<
 
+%.xml: %.txt
+	asciidoc -b docbook -d article -o $@ $<
+
+%.htm: %.txt
+	asciidoc -s -b html4 -d article -o $@ $<
+
+%.xhtml: %.txt
+	asciidoc -s -b xhtml11 -d article -o $@ $<
+
+%.tmp.odt: %.xml
+#»··-make -C /home/dag/home-made/docbook2odf/ dag-cv
+	docbook2odf -f --params generate.meta=0 -o $@ $<
+
+%.odt: $(template) %.tmp.odt
+	unoconv -f odt -t $(template) -o $@ $<
